[gd_scene load_steps=4 format=3 uid="uid://3f75gc3dni2y"]

[ext_resource type="Script" uid="uid://cf3x0vqb2w1s7" path="res://Actors/Actor.gd" id="1_kfha2"]
[ext_resource type="PackedScene" uid="uid://bsrihwmmig5kb" path="res://Components/c_LayerHandler.tscn" id="2_ey42e"]
[ext_resource type="PackedScene" uid="uid://dxv4jn58fv08b" path="res://Components/c_PropertyScaler.tscn" id="3_07ik2"]

[node name="Actor" type="CharacterBody2D" node_paths=PackedStringArray("Layer", "Scaler")]
script = ExtResource("1_kfha2")
Layer = NodePath("c_LayerHandler")
Scaler = NodePath("c_PropertyScaler")

[node name="c_LayerHandler" parent="." node_paths=PackedStringArray("Scaler") instance=ExtResource("2_ey42e")]
Scaler = NodePath("../c_PropertyScaler")

[node name="c_PropertyScaler" parent="." node_paths=PackedStringArray("nodes_to_scale") instance=ExtResource("3_07ik2")]
nodes_to_scale = [NodePath("..")]

[connection signal="_layer_change_complete" from="c_LayerHandler" to="." method="_on_c_layer_handler__layer_change_complete"]
